tweak sidedraw to show conditionally

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -19,5 +19,13 @@
 }
 
 .Logo {
-    height: 80%;
+    height: 95%;
+
+}
+
+@media (max-width: 499px) {
+
+    .DesktopOnly {
+        display: none;
+    }
 }
